Fix undefined icon visibility in advanced view

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -3135,6 +3135,7 @@ body.embed .button.logo-button:hover,
 }
 
 /* ...except for these icons, we kinda like them as they are */
+.layout-multiple-columns .icon.icon-undefined path,
 .layout-multiple-columns .icon.icon-users path,
 .layout-multiple-columns .account__header__tabs__buttons .icon.icon-user-plus path,
 .layout-multiple-columns .notification__filter-bar .icon.icon-user-plus path,
